# automatizacion-proyectos

./: .env.example  .gitignore  ABRIR_FORMULARIO.bat  ABRIR_PHICAN.bat  ABRIR_TRACKER.bat  config.json  config.json.example  datos_proyecto.json  formulario.py  generar_anexo.py  generar_boletin_electrico.py  generar_cfo.py  generar_ct.py  generar_proyecto.py  install.bat  plano_config_ejemplo.json  pyproject.toml  requirements.txt
.claude/: launch.json  settings.local.json
AUTOMATIZACION_PROYECTOS/: run_webapp.py  start_web.py
plantillas_vehiculos/: indice.json
scripts/: generar_siluetas.py  plano_vehiculo_template.py
scripts/vehiculo_blueprints/: __init__.py  db.py  downloader.py  gui_selector.py
scripts/vehiculo_blueprints/providers/: __init__.py  base.py  carblueprints.py  carquery.py  drawingdatabase.py  getoutlines.py  mr_clipart.py  paid_stub.py
tracker/: __init__.py  app.py  boletin_routes.py  codigos_reforma.json  config.py  crm_routes.py  db.py  form_routes.py  hoja_encargo.py  pdf_generator.py  project_scanner.py
tracker/templates/: base.html  base_app.html  boletines_detalle.html  boletines_editar.html  boletines_lista.html  boletines_nuevo.html  crm_agenda.html  crm_cliente_form.html  crm_clientes.html  crm_configuracion.html  crm_dashboard.html  crm_hov_section.html  crm_oferta_detalle.html  crm_oferta_ensayos.html  crm_oferta_form.html  crm_ofertas.html  crm_plano_form.html  crm_planos_lista.html  crm_tareas.html  crm_tipos_trabajo.html  entries.html  entry_form.html  form_proyecto.html  index.html  qr.html  templates_list.html
(+3 files in other folders)
